# rlcard

./: pyproject.toml  temp_notes.md
.github/workflows/: python-package.yml
docs/: games.md  toy-examples.md
examples/: evaluate.py  run_dmc.py  run_random.py  run_rl.py
examples/pettingzoo/: run_dmc.py  run_rl.py
